--- a/day2_read_tabular_data.ipynb
+++ b/day2_read_tabular_data.ipynb
@@ -11,17 +11,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "fd41f739",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import ssl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
+   "id": "64c28513",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ssl._create_default_https_context = ssl._create_unverified_context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "f2c8fe9f",
    "metadata": {},
    "outputs": [
@@ -114,20 +125,19 @@
        "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#orders = pd.read_table('http://bit.ly/chiporders') #it doesn't work because de SSL certificate\n",
-    "orders = pd.read_table('data/chipotle.tsv')\n",
+    "orders = pd.read_table('http://bit.ly/chiporders') \n",
     "orders.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "611fe4db",
    "metadata": {},
    "outputs": [
@@ -213,7 +223,7 @@
        "4        5   33      F       other    15213"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "41118d20",
    "metadata": {},
    "outputs": [
@@ -369,7 +379,7 @@
        "[943 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "3831f26f",
    "metadata": {},
    "outputs": [
@@ -484,7 +494,7 @@
        "4   Tonga  2014      0.0           0.0    95.0         1.0      106626  0.8034"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,6 +502,258 @@
    "source": [
     "education = pd.read_csv('data/education.csv')\n",
     "education.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b91269c",
+   "metadata": {},
+   "source": [
+    "## Part of the day 10.\n",
+    "Reading from a csv file only two columns and ignore others"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "35f0ba5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['City', 'Colors Reported', 'Shape Reported', 'State', 'Time'], dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufo = pd.read_csv('http://bit.ly/uforeports')\n",
+    "ufo.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "70268520",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['City', 'State'], dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufo = pd.read_csv('http://bit.ly/uforeports', usecols=['City', 'State'])\n",
+    "ufo.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "912e4d9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ithaca</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Willingboro</td>\n",
+       "      <td>NJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Holyoke</td>\n",
+       "      <td>CO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abilene</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>New York Worlds Fair</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   City State\n",
+       "0                Ithaca    NY\n",
+       "1           Willingboro    NJ\n",
+       "2               Holyoke    CO\n",
+       "3               Abilene    KS\n",
+       "4  New York Worlds Fair    NY"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufo.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "135f4ea0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['City', 'State'], dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufo = pd.read_csv('http://bit.ly/uforeports', usecols=[0, 3])\n",
+    "ufo.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0b508a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Colors Reported</th>\n",
+       "      <th>Shape Reported</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ithaca</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>TRIANGLE</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>6/1/1930 22:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Willingboro</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OTHER</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>6/30/1930 20:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Holyoke</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OVAL</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>2/15/1931 14:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Abilene</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DISK</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>6/1/1931 13:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>New York Worlds Fair</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LIGHT</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>4/18/1933 19:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   City  Colors Reported Shape Reported State             Time\n",
+       "0                Ithaca              NaN       TRIANGLE    NY   6/1/1930 22:00\n",
+       "1           Willingboro              NaN          OTHER    NJ  6/30/1930 20:00\n",
+       "2               Holyoke              NaN           OVAL    CO  2/15/1931 14:00\n",
+       "3               Abilene              NaN           DISK    KS   6/1/1931 13:00\n",
+       "4  New York Worlds Fair              NaN          LIGHT    NY  4/18/1933 19:00"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufo = pd.read_csv('http://bit.ly/uforeports', nrows=5)  # most useful for big datasets\n",
+    "ufo"
    ]
   }
  ],
